# Matrix-Calculator

./: CMakeLists.txt  README.md  labels.txt
header/controller/: controller.h
header/model/: code.h  matrix.h  model.h  query.h  residue.h
header/view/: complex.h  residue.h  view.h
src/: main.cpp
src/controller/: controller.cpp
src/model/: complex.cpp  model.cpp
src/view/: view.cpp
test/complex/: a.out  complex.cpp  complex.h  test.cpp
test/residue/: a.out  residue.h  test.cpp
